Fixed issues for viewing on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
+html, body {
+    -webkit-text-size-adjust: 100%;
+    text-size-adjust: 100%;
+    height: 100%;
+    margin: 0;
+    overflow: hidden;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -8,7 +16,7 @@
 
 #app {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     overflow-x: hidden;
     background-color: #111;
     flex-direction: column;
@@ -17,8 +25,9 @@
 
 #header {
     width: 100%;
-    height: 56px;
+    height: 48px;
     display: flex;
+    padding-top: env(safe-area-inset-top);
     background-color: #222;
     filter: drop-shadow(0px 10px 15px #111);
     z-index: 10;
@@ -29,9 +38,10 @@
 }
 
 #main {
-    width: 100%;
-    height: calc(100% - 48px);
+    flex: 1;
+    height: auto;
     display: flex;
+    overflow: hidden;
 }
 
 .content-left, .content-right {
@@ -50,6 +60,7 @@
     flex-direction: column;
     overflow-y: auto;
     -ms-overflow-style: none;
+    overscroll-behavior: contain;
     scrollbar-width: none;
 }
 
